--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.4.4",
     "autoprefixer": "10.4.14",
+    "leaflet": "^1.9.4",
     "mongoose": "^7.2.2",
     "next": "13.4.4",
     "postcss": "8.4.24",
