--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@next/font": "^13.4.4",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
+    "form-data": "^4.0.0",
+    "formidable": "^2.1.1",
     "leaflet": "^1.9.4",
     "mongoose": "^7.2.2",
     "next": "13.4.4",
