--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^13.4.4",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "form-data": "^4.0.0",
     "formidable": "^2.1.1",
     "leaflet": "^1.9.4",
