--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "bcrypt": "^5.1.0",
     "form-data": "^4.0.0",
     "formidable": "^2.1.1",
+    "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
     "leaflet": "^1.9.4",
     "mongoose": "^7.2.2",
     "next": "13.4.4",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
